--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -4,11 +4,11 @@
       "id": "tt32820897",
       "type": "movie",
       "name": "Demon Slayer: Kimetsu no Yaiba Infinity Castle",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178788-ePmnABYuFdcE.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178788-YGZc0lb7DNoe.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt32820897"
       },
-      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Demons/Male Protagonist/Swordplay/Revenge/Dungeon/Shounen/Super Power/Curses\n<i>The All-Out War Begins.</i>\n\n<br><br>\nTheatrical trilogy adaptation of the Infinity Castle Arc."
+      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Demons/Male Protagonist/Swordplay/Revenge/Dungeon/Shounen/Super Power/Curses\n<i>The All-Out War Begins.</i>\n\n<br><br>\nPart 1 of the theatrical trilogy adaptation of the Infinity Castle Arc."
     },
     {
       "id": "tt30472557",
