--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "The Fragrant Flower Blooms With Dignity",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-vmtWANHhtVaB.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Urban/School/Shounen/Food/Male Protagonist/Female Protagonist/Ensemble Cast/Iyashikei/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Urban/School/Shounen/Food/Male Protagonist/Female Protagonist/Iyashikei/Ensemble Cast/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt32612521",
@@ -113,13 +113,6 @@
       "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Female Harem/Fake Relationship/Female Protagonist/Shounen/Unrequited Love/Primarily Adult Cast/Urban/Kaiju\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Kanojo, Okarishimasu 4th Season was streamed 4 days in advance of the TV broadcast on DMM TV, dAnimestore, and Crunchyroll beginning July 1, 2025. Regular broadcasting began on July 5, 2025.</i>"
     },
     {
-      "id": "tt33472011",
-      "type": "series",
-      "name": "CITY THE ANIMATION",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181841-xg2brEzNHvjU.png",
-      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Slapstick/Urban/Female Protagonist/College/Ensemble Cast/Surreal Comedy/Primarily Adult Cast\nThis town, is not just a normal town.<br>\nThere's laughter, love and emotional moments.<br>\nAn unpredictable ordinary life presented by the residents.<br>\nExciting stuffs come one after another. Welcome to CITY. \n<br><br>\n(Source: Kyoto Animation)"
-    },
-    {
       "id": "tt33317800",
       "type": "series",
       "name": "Secrets of the Silent Witch",
@@ -127,11 +120,25 @@
       "description": "Genres: Adventure, Fantasy\nTags:Female Protagonist/Shoujo/Witch/Magic/Politics/School/Royal Affairs/Bullying/Dragons/Ojou-sama/Class Struggle\nMonica Everett, the Silent Witch, is the world’s only practitioner of Voiceless Magic, a veritable heroine who single-handedly fended off the Black Dragon of legend. However, the young prodigy is actually…super-duper shy! Yup, turns out she only learned Voiceless Magic to avoid speaking in public. Ignorant of this, the Seven Sages have placed her on a top-secret mission to guard the Second Prince. Can Monica keep it together as she contends with both social interaction and the evils targeting the young royal?\n<br><br>(Source: Yen Press, edited)"
     },
     {
+      "id": "tt33472011",
+      "type": "series",
+      "name": "CITY THE ANIMATION",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181841-xg2brEzNHvjU.png",
+      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Slapstick/Urban/Female Protagonist/College/Ensemble Cast/Surreal Comedy/Primarily Adult Cast\nThis town, is not just a normal town.<br>\nThere's laughter, love and emotional moments.<br>\nAn unpredictable ordinary life presented by the residents.<br>\nExciting stuffs come one after another. Welcome to CITY. \n<br><br>\n(Source: Kyoto Animation)"
+    },
+    {
       "id": "tt36592708",
       "type": "series",
       "name": "There's No Freaking Way I'll Be Your Lover! Unless...",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184591-jRXZ29bN61Zc.jpg",
       "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/Yuri/LGBTQ+ Themes/Female Harem/School\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt36988358",
+      "type": "series",
+      "name": "Takopi's Original Sin",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-K8o5pta80AU0.jpg",
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Aliens/Female Protagonist/Primarily Child Cast/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt14400866",
@@ -146,13 +153,6 @@
       "name": "The Water Magician",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186052-hFcX9WNzAUlA.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Magic/Survival\nRyou is delighted to be reincarnated into the fantastical world of Phi, where he thinks he’ll get to live a quiet life learning to use his newfound water magic. Going with the flow here, however, means something very different. Ryou is immediately pitted against the wild lands he winds up in and the slew of deadly monsters that call the remote subcontinent home. You’d think he’d forget about taking it easy when he’s stuck fighting for his life, but lucky for Ryou, he’s naturally optimistic, clever, and blessed with the hidden “Eternal Youth” trait. Twenty years pass in the blink of an eye, and each encounter along the way pushes him one step closer to the pinnacle of human magic. Little does he realize that’s only the opening chapter of his tale. A fateful meeting soon thrusts Ryou to the forefront of history, forever changing the course of his life... Thus begins the adventures of the strongest water magician the world has ever seen—who also likes to do things at his own pace!<br>\n<br>\n(Source: J-Novel Club)"
-    },
-    {
-      "id": "tt36988358",
-      "type": "series",
-      "name": "Takopi's Original Sin",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-K8o5pta80AU0.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Aliens/Female Protagonist/Shounen/Primarily Child Cast\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32731400",
@@ -267,18 +267,18 @@
       "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Youkai/Demons/Exorcism/School/Shounen/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
-      "id": "tt35652489",
-      "type": "series",
-      "name": "Cultural Exchange with a Game Centre Girl",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180794-rQGxkguEc2ov.png",
-      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nKusakabe Renji, a young man working at a game centre, sees an English girl named Lily Baker playing a crane game on Valentine’s Day. Seeing her fail repeatedly to win a prize, Renji can’t help but take action. The day after Lily finally gets her plushie, Renji receives an unexpected message from her that reads, “Be my valentine!” What started as a misunderstanding leads to cultural exchange!\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt36988220",
       "type": "series",
       "name": "Detectives These Days Are Crazy!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180460-rZn4pp9YNqW0.jpg",
       "description": "Genres: Comedy, Mystery\nTags:Detective/Surreal Comedy/Seinen/Police/Crime/Ensemble Cast/Primarily Adult Cast/Urban\nNagumo Keiichirou was a genius high-school detective. No case was complex enough for him. But what happens to genius detectives when they get older?<br>\n<br>\nNow 35, with bad hips, running a failing detective agency with no cases to solve and struggling to pay the rent, he's at a dead end.<br>\n<br>\nIn comes a high school girl in his office who says she wants to work with him. With her help, will the out-of-touch, old-fashioned Nagumo get back the fire of his youth?<br>"
+    },
+    {
+      "id": "tt35652489",
+      "type": "series",
+      "name": "Cultural Exchange with a Game Centre Girl",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180794-rQGxkguEc2ov.png",
+      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nKusakabe Renji, a young man working at a game centre, sees an English girl named Lily Baker playing a crane game on Valentine’s Day. Seeing her fail repeatedly to win a prize, Renji can’t help but take action. The day after Lily finally gets her plushie, Renji receives an unexpected message from her that reads, “Be my valentine!” What started as a misunderstanding leads to cultural exchange!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31435652",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "Private Tutor to the Duke's Daughter",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170113-fq1NyxPRvLKc.jpg",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Magic/Female Harem/Male Protagonist\nAfter Allen failed the court sorcerer exam, he couldn’t return home even if he wanted to. While searching for a job, an unexpected offer comes his way to be the private tutor of the duke’s daughter. Just as he lowers his guard, he faces a girl who can’t use magic at all! But what is preventing her magic from working? Allen’s unconventional lessons gently shine a light on the girl’s future.<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA and dAnimeStore. The original TV broadcast started on July 6, 2025.</i>"
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Magic/Female Harem/Male Protagonist/Teacher\nAfter Allen failed the court sorcerer exam, he couldn’t return home even if he wanted to. While searching for a job, an unexpected offer comes his way to be the private tutor of the duke’s daughter. Just as he lowers his guard, he faces a girl who can’t use magic at all! But what is preventing her magic from working? Allen’s unconventional lessons gently shine a light on the girl’s future.<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA and dAnimeStore. The original TV broadcast started on July 6, 2025.</i>"
     },
     {
       "id": "tt34710683",
