--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,114 +1,3 @@
 {
-  "metas": [
-    {
-      "id": "tt32820897",
-      "type": "movie",
-      "name": "Demon Slayer: Kimetsu no Yaiba Infinity Castle",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178788-zm3gtpB9TpRt.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt32820897"
-      },
-      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Male Protagonist/Demons/Swordplay/Revenge/Dungeon/Shounen/Super Power/Curses/Ensemble Cast/Gore\n<i>Part 1 of the theatrical trilogy adaptation of the Infinity Castle Arc.</i>\n<br><br>\nTanjiro Kamado – a boy who joined an organization dedicated to hunting down demons called the Demon Slayer Corps after his younger sister Nezuko was turned into a demon.\n<br><br>\nWhile growing stronger and deepening his friendships and bonds with fellow corps members, Tanjiro has battled many demons with his comrades – Zenitsu Agatsuma and Inosuke Hashibira. Along the way, his journey has led him to fight alongside the Demon Slayer Corps’ highest-ranking swordsmen, the Hashira, including Flame Hashira Kyojuro Rengoku aboard the Mugen Train, Sound Hashira Tengen Uzui within the Entertainment District, as well as Mist Hashira Muichiro Tokito and Love Hashira Mitsuri Kanroji at the Swordsmith Village.\n<br><br>\nAs the Demon Slayer Corps members and Hashira engaged in a group strength training program, the Hashira Training, in preparation for the forthcoming battle against the demons, Muzan Kibutsuji appears at the Ubuyashiki Mansion. With the head of the Demon Corps in danger, Tanjiro and the Hashira rush to the headquarters but are plunged into a deep descent to a mysterious space by the hands of Muzan Kibutsuji.\n<br><br>\nThe destination of where Tanjiro and Demon Slayer Corps have fallen is the demons’ stronghold – the Infinity Castle. And so, the battleground is set as the final battle between the Demon Slayer Corps and the demons ignites.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt30472557",
-      "type": "movie",
-      "name": "Chainsaw Man – The Movie: Reze Arc",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171627-smzCQpAP6UQE.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt30472557"
-      },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Demons/Monster Boy/Male Protagonist/Urban Fantasy/Body Horror/Gore/Urban/Anti-Hero/Shounen/Henshin/Heterosexual\nTheatrical follow-up to <i>Chainsaw Man</i>.<br><br>\nDenji became “Chainsaw Man”, a boy with a devil’s heart, and is now part of Special Division 4’s devil hunters. After a date with Makima, the woman of his dreams, Denji takes shelter from the rain. There he meets Reze, a girl who works in a café.<br><br>\n\n(Source: MAPPA CHANNEL)\n\n"
-    },
-    {
-      "id": "tt37529048",
-      "type": "movie",
-      "name": "bâan: The Boundary of Adulthood",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195494-2siDsNQmaKym.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt37529048"
-      },
-      "description": "Genres: Fantasy\nTags:Isekai/Urban Fantasy/Female Protagonist/Coming of Age/Mythology/Male Protagonist\nA story of two people in search of a new life, who leave their birthplaces - travelling to a whole different world trying to find a place where they truly belong. Set in the fictional world of Euthania, a land rich in nature with various magical races based on South East Asian Mythology, which is connected to Japan via a warp gate.<br><br>\n\n(Source: Official Trailer)"
-    },
-    {
-      "id": "tt32600395",
-      "type": "movie",
-      "name": "100 METERS",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177687-T4SrtVjrmW01.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt32600395"
-      },
-      "description": "Genres: Drama, Sports\nTags:Rotoscoping/Coming of Age/Athletics/Shounen/Male Protagonist/Fitness/Outdoor Activities\n<i>100 METERS</i> follows Togashi, a track star who is born to run. As a kid, he is naturally gifted and wins every 100-meter race without effort. But in sixth grade, he meets Komiya, a transfer student who is full of determination but lacks technique. In teaching him, Togashi gives Komiya a new purpose: to win no matter what. Years pass by, and Togashi and Komiya meet again as rivals on the track and reveal their true selves.\n<br><br>\n(Source: GKIDS)"
-    },
-    {
-      "id": "tt35487769",
-      "type": "movie",
-      "name": "Fushigi ‌no ‌Kuni ‌de ‌Alice to: Dive ‌in ‌Wonderland",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186181-m4vTJnKuYqje.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt35487769"
-      },
-      "description": "Genres: Fantasy\nTags:Female Protagonist/Fairy Tale/Isekai\n<i>I'm supposed to be reading the air so I don't screw up,<br>\nI'm doing what everyone else is doing,<br>\nWhy can't I get things done?</i><br><br>\n\nRise Azumino, a university student, was lost in her life,<br>\nOne day, guided by an invitation letter left behind by her late grandmother, she enters “Wonderland\".<br>\nThere she meets a girl named Alice and they begin their journey together.<br><br>\n\nRise meets the White Rabbit, the Caterpillar, the Queen of Hearts, the Trumpeter, the Mad Hatter and the March Hare, Humpty Dumpty, the twins Tweedle Dum and Tweedle Dee, the Cheshire Cat and ......<br>\nThe residents of Wonderland appear one after another in front of Rise!<br>\nAnd the crazy commotion that ensues!<br>\nWhat kind of future will Rise choose in this crazy adventure with Alice?<br><br>\n\nThis adventure will surely bring a smile to your face tomorrow!<br><br>\n(Source: Official Site, Translated)"
-    },
-    {
-      "id": "tt36592916",
-      "type": "movie",
-      "name": "ChaO",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186169-QRx9StczXhsR.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt36592916"
-      },
-      "description": "Genres: Fantasy, Romance\nTags:Mermaid\n In a futuristic world where humans and mermaids coexist, <i>ChaO</i> follows Stephan, a mild-mannered office worker at a shipbuilding company, whose life is upended when he is suddenly proposed to by Chao — a princess from the mermaid kingdom. With no time to make sense of what’s happening, Stephan soon finds himself living with the unpredictable, wholehearted Chao. As her sincere love begins to break down his emotional barriers, an unexpected and touching romance begins to unfold.<br><br>\n(Source: GKIDS)"
-    },
-    {
-      "id": "tt37437800",
-      "type": "movie",
-      "name": "Tooi-san wa Seishun Shitai! \"Baka to SmaPho to Romance to\"",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx193623-t9k2EmmT8G8E.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt37437800"
-      },
-      "description": "Genres: Comedy\nTags:\nTooi, an ordinary high school girl, was expecting a normal school life—until everything changed on her very first day.\n<br><br>\nAfter catching the attention of the unpredictable and overly energetic classmate Jel, she's suddenly roped into the mysterious \"Youth Romance Club,\" a bizarre school group dedicated to chasing down anything that feels \"youthful\" or \"romantic.\"\n<br><br>\nWhat should've been a carefree club quickly spirals into chaotic antics, with Tooi constantly playing the straight man to everyone's nonsense. To make things even wilder, the club's antics start getting streamed online!\n<br><br>\nBetween laughter, unexpected twists, and even a mysterious incident, this unpredictable school life is just getting started."
-    },
-    {
-      "id": "tt36857472",
-      "type": "movie",
-      "name": "AS ONE",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187317-oD1Pwu43UVPQ.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt36857472"
-      },
-      "description": "Genres: Mecha, Sci-Fi\nTags:Full CGI\nSquare Enix’s sci-fi arcade game <i>Starwing Paradox</i> is making a comeback as a prequel anime movie. A new anime feature film titled <i>AS ONE</i> has been announced as a prequel story set 20 years before the events of the game, expanding the game’s universe with a new story. The movie is set to premiere in Summer 2025.<br><br>\n(Source: Anime Corner)"
-    },
-    {
-      "id": "tt36592995",
-      "type": "movie",
-      "name": "Odekake Kozame: Tokai no Otomodachi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177518-jv8sDYLdEsmb.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt36592995"
-      },
-      "description": "Genres: Slice of Life\nTags:Urban/Animals/Iyashikei/Anthropomorphism\nKozame-chan's everyday life is full of fun and excitement! This time, the next destination is the big city. What awaits Kozame-chan is an unfamiliar place, and new friends. A big adventure filed with tiny miracles is about to begin.\n<br><br>\n(Source: Youtube)\n<br><br>\n<i>Note: The film receives an early premiere at the Tokyo International Shark Film Festival on August 3, 2025.</i>"
-    },
-    {
-      "id": "tt35009463",
-      "type": "movie",
-      "name": "Crayon Shin-chan: Chou Karei! Shakunetsu no Kasukabe Dancers",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185537-bHzg7pq3EIKe.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt35009463"
-      },
-      "description": "Genres: Comedy, Ecchi, Slice of Life\nTags:\nnull"
-    },
-    {
-      "id": "tt36270843",
-      "type": "movie",
-      "name": "KING OF PRISM -Your Endless Call- Minna Kirameke! Prism☆Tours",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184756-ef85Z2D47G1C.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt36270843"
-      },
-      "description": "Genres: Music, Sports\nTags:Idol/Primarily Male Cast/CGI/Ice Skating\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
-    }
-  ]
+  "metas": []
 }
